Fixing fullscreen on android! Better SDL/OpenGL initialization!

--- a/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/AndroidManifest.xml
+++ b/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.SDL2_GradleApp"
+          package="com.snapjaw.bindstone"
           android:versionCode="1"
           android:versionName="1.0">
+
+  <uses-feature android:glEsVersion="0x00030000" android:required="true" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.INTERNET"/>
   
   <application
       android:allowBackup="false"
       android:label="@string/app_name">
-    <activity android:name=".SDL2_GradleApp"
+      android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
+      <activity android:name=".BindstoneActivity"
               android:label="@string/app_name"
-              android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+              android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
               android:screenOrientation="landscape">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
+        <intent-filter>
+          <action android:name="android.intent.action.MAIN" />
+          <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
     </activity>
   </application>
 </manifest>
