--- a/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/build.gradle
+++ b/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion = "29.0.2"
 
     defaultConfig.with {
-        applicationId = "com.mutedvision.bindstone"
+        applicationId = "com.snapjaw.bindstone"
         minSdkVersion = 21
         targetSdkVersion = 29
         multiDexEnabled true
@@ -16,15 +16,26 @@ android {
         targetCompatibility=JavaVersion.VERSION_1_7
     }
 
+    signingConfigs {
+        releaseSigningConfig {
+            storeFile rootProject.file("../../../Certificates/BindstoneKeyStore.jks")
+            storePassword "DragonVision123!"
+            keyAlias "bindstone"
+            keyPassword "DragonVision123!"
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled = false
-            proguardFiles.add(file('proguard-rules.txt'))
-            debuggable = true
+            debuggable = false
+            minifyEnabled = true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.releaseSigningConfig
         }
         debug {
-            minifyEnabled = false
             debuggable = true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
         }
     }
 
