--- a/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/AndroidManifest.xml
+++ b/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
   
   <application
       android:allowBackup="false"
+      android:icon="@mipmap/ic_launcher"
+      android:roundIcon="@mipmap/ic_launcher_round"
       android:label="@string/app_name">
       android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
       <activity android:name=".BindstoneActivity"
